@@ -50,6 +50,7 @@ OpenLDAP 2.4.24 Engineering
 	Fixed slapo-pcache to ignore undefined attrs (ITS#6600)
 	Fixed slapo-ppolicy don't update opattrs on consumers (ITS#6608)
 	Fixed slapo-refint when last group member is deleted (ITS#6663)
+	Fixed slapo-refint with subtree rename (ITS#6730)
 	Fixed slapo-sssvlv initialization (ITS#6649)
 	Fixed slapo-syncprov to send error if consumer is newer (ITS#6606)
 	Fixed slapo-syncprov filter race condition (ITS#6708)
